// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/Button graphical (JSX) should add custom className 1`] = `
<button
  className="button custom"
  onClick={undefined}
  style={Object {}}
>
  
</button>
`;

exports[`common/Button graphical (JSX) should add custom style 1`] = `
<button
  className="button"
  onClick={undefined}
  style={
    Object {
      "color": "blue",
    }
  }
>
  
</button>
`;

exports[`common/Button graphical (JSX) should add custom type 1`] = `
<button
  className="button warning"
  onClick={undefined}
  style={Object {}}
>
  
</button>
`;

exports[`common/Button graphical (JSX) should add handler 1`] = `
<button
  className="button"
  onClick={[Function]}
  style={Object {}}
>
  
</button>
`;

exports[`common/Button graphical (JSX) should add text 1`] = `
<button
  className="button"
  onClick={undefined}
  style={Object {}}
>
  my button
</button>
`;

exports[`common/Button graphical (JSX) should have a default behaviour 1`] = `
<button
  className="button"
  onClick={undefined}
  style={Object {}}
>
  
</button>
`;
